style/style.css
/* intro */

.intro {
    min-height: 100vh;
    background-image: url("../assets/building.png");
    background-size: cover;
}

.navi {
    font-size: 17px;
    text-decoration: none;
}

.navi:hover {
    text-decoration: none !important;
    color: var(--color-red) !important;
}

.people {
    bottom: 0;
    right: 0;
    max-width: 43%;
}

.home-logo {
    width: 15vmax;
}

.home-tagline {
    font-family: "Source Serif 4", serif;
    font-optical-sizing: auto;
    font-weight: 300 !important;
    font-style: italic;
}

.home-tagline span {
    font-size: 60px;
    margin: 5vh 0 0 12vw;
    line-height: 100px;
    color: var(--color-dark-gray);
}
/* intro end */

/* welcome */

.welcome-row {
    background-color: var(--bg-gray);
    padding: 30px 40px;
    min-height: 100vh;
}

.welcome-col {
    border-top-left-radius: 140px;
    border-bottom-right-radius: 140px;
    padding: 7.5% 20%;
}

.welcome-col .welcome-title {
    font-size: 55px;
    color: var(--color-dark-gray);
    font-weight: bold;
}

.welcome-col .welcome-desc {
    margin-top: 7.5%;
    font-size: 20px;
    font-weight: 200;
    font-family: "Open Sans", sans-serif !important;
}

/* welcome end */

/* why */

.why {
    min-height: 100vh;
    background-color: var(--bg-gray);
    padding: 15%;
}

.carry {
    bottom: -4%;
    right: 25%;
}

.why-left img {
    max-width: 90%;
}

.why-right {
    height: 100%;
    padding-left: 5%;
}

.why-right div img {
    max-width: 70%;
    margin-bottom: 20%;
}

.why-right div span {
    font-size: 20px;
}

/* why end */

/* service */

.service-row {
    background: rgb(225,225,225);
    background: linear-gradient(180deg, rgba(225,225,225,1) 0%, rgba(130,27,28,1) 100%);
    padding: 30px 40px;
    min-height: 100vh;
}

.service-col {
    border-bottom-left-radius: 140px;
    border-top-right-radius: 140px;
    padding: 7.5% 12%;
    background-color: var(--color-dark-gray);
}

.service-title {
    font-size: 55px;
    font-weight: 600;
}

.service-desc {
    padding: 0 3%;
    margin: 28px 0 55px 0;
    font-size: 23px;
    font-weight: 300;
    font-family: "Open Sans", sans-serif;
}

.service-item span {
    font-size: 20px;
    font-family: "Source Serif 4", sans-serif;
}

.service-cont {
    margin-bottom: 46px;
}

.service-col button {
    width: 25%;
    background-color: #EBE3D5;
    font-family: "Open Sans", sans-serif;
    font-size: 15px;
    color: var(--color-dark-gray);
    box-shadow: none;
    border: none;
    padding: 14px;
    border-radius: 50px;
}

/* service end */

/* footer */

.footer {
    overflow: hidden;
    min-height: 70vh;
    background-color: var(--color-red);
    padding: 10vh 8vw;
}

.footer-left {
    color: var(--font-gold);
}

.footer-nav .footer-nav-item a,
.footer-nav .footer-nav-item a:hover {
    text-decoration: none;
    color: var(--font-gold);
}

.socmed span {
    margin-bottom: 10px !important;
    font-size: 20px;
}

.socmed i {
    font-size: 30px;
    margin-left: 10px;
}

.footer-center,
.footer-right_item  {
    color: var(--font-gold);
}

.footer-right_item {
    font-size: 15px;
    width: 100% !important;
    display: flex;
}

.footer-right_item span {
    margin: 0 0 8px 16px;
}

.footer-right_item i {
    font-size: 20px;
}

.footer-right,
.input-cont,
.input-cont-6 {
    align-items: flex-end;
}

.input-cont-6 input {
    width: 94%;
}

.input-cont,
.input-cont-6 {
    display: flex;
    flex-direction: column;
    color: #fff;
    font-weight: 300;
    font-size: 15px;
}

.input-cont input,
.input-cont textarea {
    width: 80%;
}

.input-cont input,
.input-cont-6 input,
.input-cont textarea {
    border-radius: 6px;
    border: 0;
    margin-top: 4px;
}

.input-cont textarea {
    height: 15vh;
    resize: none;
}

.footer-right_title {
    font-family: "Source Serif 4", sans-serif;
    font-size: 28px;
    color: var(--font-gold);
}

.button-cont {
    color: var(--font-gold);
}

.button-cont span {
    margin-left: 12px;
}

/* footer end */

/* reso breakpoints */

/* Small devices (landscape phones, 576px and up) */
@media (max-width: 576px) {
    .homenav,
    .people {
        display: none !important;
    }

    .home-tagline span {
        font-size: 38pt;
        line-height: 80px;
        margin: 10vh 0 0 0;
    }

    .welcome-col .welcome-title {
        font-size: 25pt !important;
    }

    .welcome-col .welcome-desc {
        font-size: 12pt !important;
        text-align: left !important;
        margin-top: 30px;
    }
    
    .welcome-row {
        padding: 2vh 8%;
    }

    .welcome-row img {
        width: 90%;
    }

    .why-row {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
    }

    .why-right {
        width: 100% !important;
        padding: 0 17%;
        margin-bottom: 3vh;
    }

    .why-right div span {
        text-align: right;
        width: 100%;
        font-size: 12pt;
        margin-top: 18px;
    }

    .why {
        padding: 2vh 0;
        min-height: fit-content !important;
        max-height: fit-content !important;
    }

    .why-right div img {
        display: none;  
    }

    .why-left {
        justify-content: flex-end !important;
        padding: 0 8%;
    }

    .why-left img {
        max-width: 50%;
    }

    .service-title {
        font-size: 24pt;
    }

    .service-desc {
        font-size: 12pt;
        text-align: left !important;
        line-height: 24px;
    }

    .service-row {
        padding: 0 35px;
    }

    .service-row button {
        display: none;
    }

    .service-cont {
        display: none !important;
    }

    .service-col {
        padding: 7.5% 10%;
    }

    .mobile-item {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 1.5vh 0;
    }

    .mobile-item img {
        margin-bottom: 10px;
    }

    .mobile-item span {
        color: #fff;
        font-family: "Open Sans", sans-serif;
        font-weight: 600;
        text-align: center !important;
    }

    .footer {

    }

    .footer-nav,
    .socmed,
    .footer-left_image {
        display: none !important;
    }

    .footer1 {
        order: 2
    }

    .footer2{
        order: 1;
        align-items: center;
    }

    .footer-map {
        width: 100%;
    }

    .footer-right_title {
        font-size: 25pt;
    }

    .footer-right_row div input,
    .footer-right_row div textarea {
        width: 100% !important;
    }

    .footer-right_row div input {
        height: 3.5vh;
    }

    .input-cont,
    .input-cont-6 {
        align-items: flex-start !important;
    }

    .button-cont {
        justify-content: center !important;
    }

    .button-cont i {
        display: none;
    }

    .button-cont button {
        margin: 2vh 2vh 4vh 2vh;
        background-color: var(--font-gold);
        height: fit-content;
        color: var(--color-dark-gray);
        padding: 7px 27.5px;
        border: 0;
        border-radius: 14px;
    }
}

/* Medium devices (tablets, 768px and up) */
@media (max-width: 768px) {
}

/* Large devices (desktops, 992px and up) */
@media (max-width: 992px) {
}

/* Extra large devices (large desktops, 1200px and up) */
@media (max-width: 1200px) {
}

/* Extra extra large devices (larger desktops, 1400px and up) */
@media (max-width: 1400px) {
}

/* breakpoints end */

/* global below */

* {
    font-family: "Open Sans", sans-serif;
}

:root {
    --color-red: #821B1C;
    --color-dark-gray: #332C30;
    --color-light-gray: #D7D7D7;
    --color-lightest-gray: #F4F4F4;
    --color-gray: #9D9696;
    --color-gold: #D4AF37;
    --bg-gray: #E1E1E1;
    --font-gold: #FAE7C9;
}

html,
body {
    overflow-x: hidden;
    max-width: 100vw;
    overflow-y: scroll;
}

